Use popover to avoid overflow issues in baselayer switcher

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -685,4 +685,9 @@
       &:last-child { border-bottom: none; }
     }
   }
+  .dropdown-menu {
+    position: static;
+    box-shadow: none;
+    padding: 0 0 1em;
+  }
 }
